--- a/style.css
+++ b/style.css
@@ -115,3 +115,8 @@ section {
     font-size: 20px;
     font-weight: bold;
 }
+footer {
+    text-align: center;
+    color: #000000;
+    font-weight: bold;
+}
